fixed dropdown & title on small screens

--- a/src/app/breadcrumb/breadcrumb.component.scss
+++ b/src/app/breadcrumb/breadcrumb.component.scss
@@ -66,7 +66,9 @@
 }
 
 .breadCrumbImageName{
-    white-space: nowrap;
+    // white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 
