--- a/src/app/gallery/gallery.component.scss
+++ b/src/app/gallery/gallery.component.scss
@@ -4,7 +4,8 @@
 
 .title {
     letter-spacing: 0.2vh;
-    font-size: 2vh;
+    font-size: 1.5vh;
+    margin-right: 2vh;
 }
 
 .gallery {
